# qwen-hebrew-finetuning

./: .gitignore  Makefile  README.md  SAGEMAKER_MIGRATION_PLAN.md  UV_SETUP.md  activate_env.sh  config-benchmarks.json  connect_s3_benchmark.py  cost_performance_analysis.md  debug_lighteval.py  example_usage.py  extract_benchmark_results.py  git_setup.sh  integrate_psychometric_benchmark.py  pyproject.toml  rar_to_csv_converter.py  requirements.txt  run_cli_eval.sh  run_lighteval.py  s3_select_processor.py  sagemaker_implementation_structure.md  scores_dashboard.py  setup_uv_env.sh  test_cleaning_sample.py  test_lighteval_command.py  test_lighteval_setup.py
LLM_cleaning/: gemini_api_test.py  gemma_api_quota_aware.py
batch_cleaning/: Dockerfile  build_and_deploy.py  inference.py  requirements.txt
benchmarks/: psychometric_dataset.jsonl  psychometric_dataset.xlsx  psychometric_dataset_info.json  psychometric_eval_config.json  run_psychometric_eval.py
clean_wikipedia/: wiki_article_finder.py  wiki_batch_processor.py  wiki_text_cleaner.py
clean_with_gemma_api/: add_word_count.py  gemini_api.py  gemini_api_parts.py  gemma_api_test.py
convert-ckpt/: README.md  convert.py
cross_lang_moe_analysis/: 1 - create_moe_data.ipynb  2 - analysis_results.ipynb  README.md  all_layers_moe_analysis.py  analysis_summary.md  comprehensive_moe_analysis.py  deploy.py  dist_heatmap.py  moe_analysis.py  moe_analysis_log_only.py  requirements.txt  sample_moe_analysis.py
english_to_hebrew_translation/: 1.1 - translate_funcs_mmlu.ipynb
evaluation/: Dockerfile  check_port_avaliablity.py  detailed_results_viewer.py  extract_benchmark_results.py  gradio.service  run_all_models.sh  run_benchmark_accelerate_sm.sh  run_benchmark_vllm_sm.sh  run_cli_eval.sh  s3_upload.py  (+4 more)
(+293 files in other folders)
